2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_is_writable):
	* theme-util.h: move function here from common/

	* appearance-style.c: (gtk_theme_changed), (window_theme_changed),
	(icon_theme_changed), (cursor_theme_changed):
	* appearance-themes.c: (theme_selection_changed_cb): adapt callers

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_delete): if the parent directory is empty after
	deleting a theme, delete the parent directory, too

2007-10-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (cursor_theme_delete_cb), (style_init):
	* theme-util.c: (theme_delete): make the cursor themes delete button
	work

2007-10-25  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (style_init):
	* data/appearance.glade: move some more of the cursor size widget
	initialization to glade. This allows the slider to be updated properly
	on startup (bug #490103)

2007-10-25  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c: Take cursor size into account in theme_is_equal(),
	and also watch the cursor theme/size gconf keys for changes.

2007-10-24  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_load_from_gconf),
	(theme_details_changed_cb), (themes_init): return a new theme instead
	of munging whatever got passed in. Makes for a saner API

2007-10-24  Jens Granseuer  <jensgr@gmx.net>

	The fix for bug #420154 not only made the entry for the theme installer
	disappear from the menu, but also disabled mime-type handling for Gnome
	Theme Packages (bug #486811). Revert that change and use NoDisplay=true
	instead. This will remove the entry from the menu (not from the menu
	editor, though), and not break mime handling.

	* data/gnome-theme-installer.desktop.in.in: use NoDisplay=true instead
	of OnlyShowIn=;

2007-10-18  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_load_from_gconf),
	(theme_set_custom_from_theme): really make sure gtk, metacity, icon, and